More divs, more classes
Separates the inner middle paragraphs

--- a/layout2.css
+++ b/layout2.css
@@ -24,7 +24,7 @@ article {
     
     justify-content: flex-start;
     align-items: stretch;
-    align-content: flex-end;
+    align-content: stretch;
     
     padding: 0px 6px;
     
